--- a/frontend/ultra_map.html
+++ b/frontend/ultra_map.html
@@ -53,7 +53,7 @@
                 <p><strong>Unique Locations:</strong> <span id="unique-locations">0</span></p>
             </div>
             <button onclick="askAlanBasedOnMap()" class="orange-btn">Ask Alan for Race Suggestions</button>
-            <button onclick="downloadUltraResume()" class="green-btn">📄 Download Résumé (PDF)</button>
+            <button class="green-btn">📄 Download Résumé (PDF)</button>
         </section>
 
         <div id="ultra-map" style="height: 500px;"></div>
