--- a/frontend/ultra_map.html
+++ b/frontend/ultra_map.html
@@ -77,7 +77,7 @@
 
         <!-- 📝 Hidden Résumé Content -->
         <div id="ultra-resume-content"
-            style="display: none; padding: 40px; font-family: Arial, sans-serif; max-width: 700px;">
+            style="display: none; padding: 40px; font-family: Arial, sans-serif; max-width: 700px; margin: 0 auto; align-items: flex-start; justify-content: flex-start;">
             <h1 style="text-align: center; font-size: 24px; font-weight: bold; margin-bottom: 20px;">Ultramarathon
                 Résumé</h1>
 
