Update ultra_map.html for improved résumé layout and content

--- a/frontend/ultra_map.html
+++ b/frontend/ultra_map.html
@@ -75,9 +75,9 @@
             <div id="photo-scroll-container" class="photo-scroll"></div>
         </section>
 
-        <!-- 📝 Hidden Résumé Content -->
+        <!-- 📝 Hidden Résumé Content (Updated: No Photo, Pushed to Top) -->
         <div id="ultra-resume-content"
-            style="display: none; padding: 40px; font-family: Arial, sans-serif; max-width: 700px; margin: 0 auto; align-items: flex-start; justify-content: flex-start;">
+            style="display: none; padding: 20px 40px 20px 40px; font-family: Arial, sans-serif; max-width: 700px;">
             <h1 style="text-align: center; font-size: 24px; font-weight: bold; margin-bottom: 20px;">Ultramarathon
                 Résumé</h1>
 
