--- a/frontend/ultra_map.html
+++ b/frontend/ultra_map.html
@@ -40,17 +40,25 @@
         </div>
     </header>
 
-    <main style="padding-top: 140px;">
+    <main style="padding-top: 100px;">
         <section class="ultra-map-hero">
             <div class="hero-content">
                 <h1>📍 My Ultra Map</h1>
                 <p>Every run over 26.2 miles — visualized across the globe.</p>
             </div>
-            <div class="ultra-stats-card">
-                <p><strong>Total Ultra Runs:</strong> <span id="ultra-count">0</span></p>
-                <p><strong>Total Distance:</strong> <span id="ultra-distance">0 mi</span></p>
-                <p><strong>Longest Run:</strong> <span id="longest-run">0 mi</span></p>
-                <p><strong>Unique Locations:</strong> <span id="unique-locations">0</span></p>
+            <div class="ultra-stats-row" style="display: flex; flex-wrap: wrap; gap: 20px;">
+                <div class="ultra-stats-card">
+                    <p><strong>Total Ultra Runs:</strong> <span id="ultra-count">0</span></p>
+                    <p><strong>Total Distance:</strong> <span id="ultra-distance">0 mi</span></p>
+                    <p><strong>Longest Run:</strong> <span id="longest-run">0 mi</span></p>
+                    <p><strong>Unique Locations:</strong> <span id="unique-locations">0</span></p>
+                </div>
+
+                <div id="milestone-wall" class="milestone-wall"
+                    style="background: #f9f9f9; padding: 16px; border-radius: 10px; border: 1px solid #ddd; flex: 1;">
+                    <h3 style="margin-bottom: 10px;">🏆 Milestone Wall</h3>
+                    <ul id="milestone-list" style="padding-left: 20px; margin: 0;"></ul>
+                </div>
             </div>
             <button onclick="askAlanBasedOnMap()" class="orange-btn">Ask Alan for Race Suggestions</button>
             <button class="green-btn">📄 Download Résumé (PDF)</button>
