Add milestone wall and detailed PDF résumé with Alan insights

--- a/frontend/ultra_map.html
+++ b/frontend/ultra_map.html
@@ -47,15 +47,15 @@
                 <p>Every run over 26.2 miles — visualized across the globe.</p>
             </div>
             <div class="ultra-stats-row" style="display: flex; flex-wrap: wrap; gap: 20px;">
-                <div class="ultra-stats-card">
+                <div class="ultra-stats-card milestone-box">
                     <p><strong>Total Ultra Runs:</strong> <span id="ultra-count">0</span></p>
                     <p><strong>Total Distance:</strong> <span id="ultra-distance">0 mi</span></p>
                     <p><strong>Longest Run:</strong> <span id="longest-run">0 mi</span></p>
                     <p><strong>Unique Locations:</strong> <span id="unique-locations">0</span></p>
+                    <p><strong>Total Elevation:</strong> <span id="total-elevation">0 ft</span></p>
                 </div>
 
-                <div id="milestone-wall" class="milestone-wall"
-                    style="background: #f9f9f9; padding: 16px; border-radius: 10px; border: 1px solid #ddd; flex: 1;">
+                <div id="milestone-wall" class="milestone-box">
                     <h3 style="margin-bottom: 10px;">🏆 Milestone Wall</h3>
                     <ul id="milestone-list" style="padding-left: 20px; margin: 0;"></ul>
                 </div>
@@ -99,8 +99,14 @@
             </section>
 
             <section style="margin-bottom: 20px;">
+                <h2 style="font-size: 18px; border-bottom: 1px solid #ccc; padding-bottom: 5px;">🏆 Milestone Wall</h2>
+                <ul id="resume-milestone-list" style="padding-left: 20px; margin: 0;"></ul>
+            </section>
+
+            <section style="margin-bottom: 20px;">
                 <h2 style="font-size: 18px; border-bottom: 1px solid #ccc; padding-bottom: 5px;">🧠 Alan's Recommended
                     Next Challenge</h2>
+
                 <ul style="padding-left: 20px;">
                     <li>🏔️ Try a 100K or 100-mile mountain ultra</li>
                     <li>🌍 Explore a race in Europe or Asia</li>
