--- a/frontend/ultra_map.html
+++ b/frontend/ultra_map.html
@@ -69,6 +69,7 @@
         <section id="visited-regions" style="margin: 40px 20px;">
             <h2 class="chart-title">🌎 States Where You've Completed Ultras</h2>
             <p><strong>States Completed:</strong> <span id="visited-states-count">0</span></p>
+            <ul id="visited-states-list" style="margin-top: 8px; padding-left: 18px;"></ul>
         </section>
 
         <section id="ultra-timeline-section" style="margin: 40px 20px;">
