--- a/frontend/index.html
+++ b/frontend/index.html
@@ -37,6 +37,7 @@
                     <li><a href="race_directory.html">Race Directory</a></li>
                     <li><a href="forum.html">Runner Community</a></li>
                     <li><a href="articles.html">Articles</a></li>
+                    <li><a href="gear.html">Gear</a></li>
                 </ul>
             </nav>
         </div>
