Full gear page with verified affiliate links and improved layout

--- a/frontend/gear.html
+++ b/frontend/gear.html
@@ -35,78 +35,116 @@
         </div>
     </header>
 
-    <!-- MAIN -->
+    <!-- MAIN CONTENT -->
     <main style="padding: 60px 20px; max-width: 800px; margin: auto;">
-        <h1 style="text-align: center;">🏃‍♀️ Gear Recommendations</h1>
-        <p style="text-align: center;">These are Emmi’s favorite ultrarunning essentials. Some links are affiliate links
-            — they help support the site at no extra cost to you.</p>
 
-        <!-- Section -->
-        <section>
+        <!-- Shoes -->
+        <section style="margin-bottom: 50px;">
             <h2>👟 Trail Running Shoes</h2>
-            <ul>
-                <li><strong>Altra Lone Peak 8</strong> – Great for long distances, wide toe box.
-                    <a href="https://www.amazon.com/dp/B0CMTPFK6Y?tag=ultramarath04-20" target="_blank">View on
+            <ul style="line-height: 1.8;">
+                <li><strong>ALTRA Men's Lone Peak 9</strong> – Cushioned and trail-ready.
+                    <a href="https://amzn.to/404nfxR" target="_blank" style="color: orange; font-weight: bold;">View on
                         Amazon</a>
                 </li>
-                <li><strong>HOKA Speedgoat 5</strong> – Cushion and grip for mountain ultras.
-                    <a href="https://www.amazon.com/dp/B097DBX5VZ?tag=ultramarath04-20" target="_blank">View on
+                <li><strong>ALTRA Women's Lone Peak 9</strong> – Built for comfort and long miles.
+                    <a href="https://amzn.to/44CTAx2" target="_blank" style="color: orange; font-weight: bold;">View on
                         Amazon</a>
                 </li>
-            </ul>
-        </section>
-
-        <section>
-            <h2>💧 Hydration Packs & Bottles</h2>
-            <ul>
-                <li><strong>Salomon ADV Skin 5</strong> – Lightweight and snug fit.
-                    <a href="https://www.amazon.com/dp/B09TL1MRB1?tag=ultramarath04-20" target="_blank">View on
+                <li><strong>Men's Olympus 5 Trail Running Shoe</strong> – High cushion + rugged grip.
+                    <a href="https://amzn.to/4lC54Yy" target="_blank" style="color: orange; font-weight: bold;">View on
                         Amazon</a>
                 </li>
-                <li><strong>HydraPak Soft Flask</strong> – Easy-to-pack handheld.
-                    <a href="https://www.amazon.com/dp/B07CL95Z91?tag=ultramarath04-20" target="_blank">View on
+                <li><strong>HOKA Women's Running Shoe</strong> – Trusted choice for ultradistance.
+                    <a href="https://amzn.to/40Gs9kI" target="_blank" style="color: orange; font-weight: bold;">View on
                         Amazon</a>
                 </li>
-            </ul>
-        </section>
-
-        <section>
-            <h2>🔦 Headlamps & Night Gear</h2>
-            <ul>
-                <li><strong>Petzl Actik Core</strong> – Rechargeable with long battery life.
-                    <a href="https://www.amazon.com/dp/B08DL4CWRK?tag=ultramarath04-20" target="_blank">View on
+                <li><strong>Topo Men's MTN Racer 4</strong> – Lightweight with solid grip.
+                    <a href="https://amzn.to/4lCxQby" target="_blank" style="color: orange; font-weight: bold;">View on
                         Amazon</a>
                 </li>
-                <li><strong>Black Diamond Spot 400</strong> – Reliable and waterproof.
-                    <a href="https://www.amazon.com/dp/B08FJ7K9QH?tag=ultramarath04-20" target="_blank">View on
+                <li><strong>Topo Women's MTN Racer 4</strong> – Designed for technical terrain.
+                    <a href="https://amzn.to/3GA2NhE" target="_blank" style="color: orange; font-weight: bold;">View on
                         Amazon</a>
                 </li>
             </ul>
         </section>
 
-        <section>
-            <h2>🍬 Nutrition & Electrolytes</h2>
-            <ul>
-                <li><strong>Tailwind Endurance Fuel</strong> – All-in-one fuel and electrolyte.
-                    <a href="https://www.amazon.com/dp/B00G3XNG78?tag=ultramarath04-20" target="_blank">View on
+        <!-- Nutrition -->
+        <section style="margin-bottom: 50px;">
+            <h2>🍬 Running Nutrition</h2>
+            <ul style="line-height: 1.8;">
+                <li><strong>Tailwind Mandarin (50 Servings)</strong> – Endurance fuel + hydration.
+                    <a href="https://amzn.to/44wTGpX" target="_blank" style="color: orange; font-weight: bold;">View on
                         Amazon</a>
                 </li>
-                <li><strong>Honey Stinger Waffles</strong> – Easy carbs between aid stations.
-                    <a href="https://www.amazon.com/dp/B002IGFH4C?tag=ultramarath04-20" target="_blank">View on
+                <li><strong>Tailwind Single-Serve 8 Pack</strong> – Try multiple flavors on the go.
+                    <a href="https://amzn.to/4eKf28e" target="_blank" style="color: orange; font-weight: bold;">View on
+                        Amazon</a>
+                </li>
+                <li><strong>GU Energy Gels (24-pack)</strong> – Fast carbs for long miles.
+                    <a href="https://amzn.to/3IzlPFt" target="_blank" style="color: orange; font-weight: bold;">View on
+                        Amazon</a>
+                </li>
+                <li><strong>Organic Fruit Smoothie Gels (12 pack)</strong> – Gentle, fruity fuel.
+                    <a href="https://amzn.to/3TvFA39" target="_blank" style="color: orange; font-weight: bold;">View on
+                        Amazon</a>
+                </li>
+                <li><strong>Honey Stinger Salted Caramel Waffles</strong> – Ultra-favorite snack.
+                    <a href="https://amzn.to/46vwyuv" target="_blank" style="color: orange; font-weight: bold;">View on
+                        Amazon</a>
+                </li>
+                <li><strong>Clif BLOKS Energy Chews</strong> – Electrolytes + fast fuel.
+                    <a href="https://amzn.to/44DjalA" target="_blank" style="color: orange; font-weight: bold;">View on
                         Amazon</a>
                 </li>
             </ul>
         </section>
 
-        <section>
-            <h2>🎒 Race Day Essentials</h2>
-            <ul>
-                <li><strong>Body Glide Anti-Chafe Balm</strong> – Prevents blisters & hot spots.
-                    <a href="https://www.amazon.com/dp/B000HZR4UA?tag=ultramarath04-20" target="_blank">View on
+        <!-- Gear -->
+        <section style="margin-bottom: 50px;">
+            <h2>🎒 Ultrarunning Gear</h2>
+            <ul style="line-height: 1.8;">
+                <li><strong>Salomon Active Skin 12 Vest</strong> – Comes with 2 soft flasks.
+                    <a href="https://amzn.to/3IjXcMV" target="_blank" style="color: orange; font-weight: bold;">View on
                         Amazon</a>
                 </li>
-                <li><strong>KT Tape</strong> – Extra support for race day strain.
-                    <a href="https://www.amazon.com/dp/B004D7B6HM?tag=ultramarath04-20" target="_blank">View on
+                <li><strong>Black Diamond Distance Z Poles</strong> – Foldable + lightweight.
+                    <a href="https://amzn.to/4lmZcTm" target="_blank" style="color: orange; font-weight: bold;">View on
+                        Amazon</a>
+                </li>
+                <li><strong>UltraFlask Speed 500ml/600ml</strong> – Collapsible soft bottle.
+                    <a href="https://amzn.to/4lKfZzz" target="_blank" style="color: orange; font-weight: bold;">View on
+                        Amazon</a>
+                </li>
+                <li><strong>Slim Running Belt</strong> – Lightweight pouch for phone & gels.
+                    <a href="https://amzn.to/46irqdt" target="_blank" style="color: orange; font-weight: bold;">View on
+                        Amazon</a>
+                </li>
+                <li><strong>Body Glide For Her Anti-Chafe</strong> – Extra emollients for sensitive skin.
+                    <a href="https://amzn.to/3U7ysKp" target="_blank" style="color: orange; font-weight: bold;">View on
+                        Amazon</a>
+                </li>
+                <li><strong>Polarized Sport Sunglasses</strong> – Lightweight, trail-tested frames.
+                    <a href="https://amzn.to/4lBFIds" target="_blank" style="color: orange; font-weight: bold;">View on
+                        Amazon</a>
+                </li>
+            </ul>
+        </section>
+
+        <!-- Race Day Essentials -->
+        <section style="margin-bottom: 50px;">
+            <h2>🏁 Race Day Essentials</h2>
+            <ul style="line-height: 1.8;">
+                <li><strong>KT Tape – Original Cotton</strong> – 20 count pre-cut support strips.
+                    <a href="https://amzn.to/4lotBkm" target="_blank" style="color: orange; font-weight: bold;">View on
+                        Amazon</a>
+                </li>
+                <li><strong>Anti Chafe Stick (All-Natural)</strong> – Smooth glide for long hours.
+                    <a href="https://amzn.to/3GEX5em" target="_blank" style="color: orange; font-weight: bold;">View on
+                        Amazon</a>
+                </li>
+                <li><strong>Running Bib Clips (Mixed Colors)</strong> – Fasten your number, no pins needed.
+                    <a href="https://amzn.to/4lIOu9w" target="_blank" style="color: orange; font-weight: bold;">View on
                         Amazon</a>
                 </li>
             </ul>
