Fix gear page spacing and add intro text

--- a/frontend/gear.html
+++ b/frontend/gear.html
@@ -36,7 +36,13 @@
     </header>
 
     <!-- MAIN CONTENT -->
-    <main style="padding: 60px 20px; max-width: 800px; margin: auto;">
+    <main style="padding: 120px 20px 60px; max-width: 800px; margin: auto;">
+
+        <!-- Page Description -->
+        <p style="text-align: center; font-size: 1.05rem; margin-bottom: 40px;">
+            These are our favorite ultrarunning essentials — shoes, fuel, gear, and more.
+            Some links are affiliate links, which help support the site at no extra cost to you.
+        </p>
 
         <!-- Shoes -->
         <section style="margin-bottom: 50px;">
