--- a/frontend/gear.html
+++ b/frontend/gear.html
@@ -40,7 +40,7 @@
 
         <!-- Page Description -->
         <p style="text-align: center; font-size: 1.05rem; margin-bottom: 40px;">
-            These are our favorite ultrarunning essentials — shoes, fuel, gear, and more.
+            These are our favorite ultrarunning essentials: shoes, fuel, gear, and more.
             Some links are affiliate links, which help support the site at no extra cost to you.
         </p>
 
