--- a/frontend/index.html
+++ b/frontend/index.html
@@ -36,6 +36,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="race_directory.html">Race Directory</a></li>
                     <li><a href="forum.html">Runner Community</a></li>
+                    <li><a href="ultra_map.html">My Ultra Map</a></li>
                     <li><a href="articles.html">Articles</a></li>
                     <li><a href="gear.html">Gear</a></li>
                 </ul>
