--- a/frontend/ultra_map.html
+++ b/frontend/ultra_map.html
@@ -41,48 +41,60 @@
     </header>
 
     <main style="padding-top: 100px;">
-        <section class="ultra-map-hero">
-            <div class="hero-content">
-                <h1>📍 My Ultra Map</h1>
-                <p>Every run over 26.2 miles — visualized across the globe.</p>
-            </div>
-            <div class="ultra-stats-row" style="display: flex; flex-wrap: wrap; gap: 20px; align-items: stretch;">
-                <div class="ultra-stats-card">
-                    <p><strong>Total Ultra Runs:</strong> <span id="ultra-count">0</span></p>
-                    <p><strong>Total Distance:</strong> <span id="ultra-distance">0 mi</span></p>
-                    <p><strong>Longest Run:</strong> <span id="longest-run">0 mi</span></p>
-                    <p><strong>Unique Locations:</strong> <span id="unique-locations">0</span></p>
-                    <p><strong>Total Elevation:</strong> <span id="total-elevation">0 ft</span></p>
+        <!-- Message shown if user is not connected -->
+        <div id="connection-check-message"
+            style="display: none; padding: 40px; font-size: 1.2em; text-align: center; color: darkred;">
+            You need to <a href="account.html" style="color: orange; text-decoration: underline;">connect your Strava
+                account</a> to view your Ultra Map.
+        </div>
+
+        <!-- All map and stats content -->
+        <div id="ultra-map-container" style="display: none;">
+            <section class="ultra-map-hero">
+                <div class="hero-content">
+                    <h1>📍 My Ultra Map</h1>
+                    <p>Every run over 26.2 miles — visualized across the globe.</p>
                 </div>
+                <div class="ultra-stats-row" style="display: flex; flex-wrap: wrap; gap: 20px; align-items: stretch;">
+                    <div class="ultra-stats-card">
+                        <p><strong>Total Ultra Runs:</strong> <span id="ultra-count">0</span></p>
+                        <p><strong>Total Distance:</strong> <span id="ultra-distance">0 mi</span></p>
+                        <p><strong>Longest Run:</strong> <span id="longest-run">0 mi</span></p>
+                        <p><strong>Unique Locations:</strong> <span id="unique-locations">0</span></p>
+                        <p><strong>Total Elevation:</strong> <span id="total-elevation">0 ft</span></p>
+                    </div>
 
-                <div class="ultra-stats-card" id="milestone-wall">
-                    <h3 style="margin-bottom: 10px;">🏆 Milestone Wall</h3>
-                    <ul id="milestone-list" style="padding-left: 20px; margin: 0;"></ul>
+                    <div class="ultra-stats-card" id="milestone-wall">
+                        <h3 style="margin-bottom: 10px;">🏆 Milestone Wall</h3>
+                        <ul id="milestone-list" style="padding-left: 20px; margin: 0;"></ul>
+                    </div>
                 </div>
-            </div>
-            <button onclick="askAlanBasedOnMap()" class="orange-btn">Ask Alan for Race Suggestions</button>
-            <button class="green-btn">📄 Download Résumé (PDF)</button>
-        </section>
+                <button onclick="askAlanBasedOnMap()" class="orange-btn">Ask Alan for Race Suggestions</button>
+                <button class="green-btn">📄 Download Résumé (PDF)</button>
+                <button id="copy-share-link" class="orange-btn">🔗 Share My Ultra Map</button>
+                <span id="share-status" style="margin-left: 10px; color: green; display: none;">Copied!</span>
+            </section>
 
-        <div id="ultra-map" style="height: 500px;"></div>
+            <div id="ultra-map" style="height: 500px;"></div>
 
-        <section id="visited-regions" style="margin: 40px 20px;">
-            <h2 class="chart-title">🌎 States Where You've Completed Ultras</h2>
-            <p><strong>States Completed:</strong> <span id="visited-states-count">0</span></p>
-            <ul id="visited-states-list" style="margin-top: 8px; padding-left: 18px;"></ul>
-        </section>
+            <section id="visited-regions" style="margin: 40px 20px;">
+                <h2 class="chart-title">🌎 States Where You've Completed Ultras</h2>
+                <p><strong>States Completed:</strong> <span id="visited-states-count">0</span></p>
+                <ul id="visited-states-list" style="margin-top: 8px; padding-left: 18px;"></ul>
+            </section>
 
-        <section id="ultra-timeline-section" style="margin: 40px 20px;">
-            <h2 class="chart-title">📈 Ultra Completion Timeline</h2>
-            <div style="position: relative; z-index: 10;">
-                <canvas id="ultraTimelineChart" width="100%" height="60"></canvas>
-            </div>
-        </section>
+            <section id="ultra-timeline-section" style="margin: 40px 20px;">
+                <h2 class="chart-title">📈 Ultra Completion Timeline</h2>
+                <div style="position: relative; z-index: 10;">
+                    <canvas id="ultraTimelineChart" width="100%" height="60"></canvas>
+                </div>
+            </section>
 
-        <section id="strava-photo-timeline" style="margin: 40px 20px;">
-            <h2 class="chart-title">🖼️ My Ultra Photo Timeline</h2>
-            <div id="photo-scroll-container" class="photo-scroll"></div>
-        </section>
+            <section id="strava-photo-timeline" style="margin: 40px 20px;">
+                <h2 class="chart-title">🖼️ My Ultra Photo Timeline</h2>
+                <div id="photo-scroll-container" class="photo-scroll"></div>
+            </section>
+        </div>
     </main>
 
     <!-- 📝 Hidden Résumé Content (Updated: No Photo, Pushed to Top) -->
@@ -179,6 +191,36 @@
     <script src="forum/inject_account_dropdown.js"></script>
     <script src="ultra_map_script.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
+
+    <script>
+        document.addEventListener("DOMContentLoaded", () => {
+            const token = localStorage.getItem("token");
+            const stravaConnected = localStorage.getItem("stravaConnected");
+
+            const mapContainer = document.getElementById("ultra-map-container");
+            const message = document.getElementById("connection-check-message");
+
+            if (token && stravaConnected === "true") {
+                mapContainer.style.display = "block";
+            } else {
+                message.style.display = "block";
+            }
+        });
+    </script>
+
+    <script>
+        document.getElementById("copy-share-link").addEventListener("click", () => {
+            const username = localStorage.getItem("username") || "me";
+            const shareURL = `${window.location.origin}${window.location.pathname}?user=${encodeURIComponent(username)}`;
+
+            navigator.clipboard.writeText(shareURL).then(() => {
+                const status = document.getElementById("share-status");
+                status.style.display = "inline";
+                setTimeout(() => status.style.display = "none", 2000);
+            });
+        });
+    </script>
+
 </body>
 
 </html>
