--- a/frontend/ultra_map.html
+++ b/frontend/ultra_map.html
@@ -42,13 +42,7 @@
 
     <main style="padding-top: 100px;">
 
-        <div id="strava-connect-message"
-            style="display: none; padding: 40px; font-size: 1.2em; text-align: center; color: darkred;">
-            To view your Ultra Map, please
-            <a href="training_log.html" style="color: orange; text-decoration: underline;">connect your Strava
-                account</a>
-            on the Training Log page.
-        </div>
+        <div id="connection-check-message" style="display: none;"></div>
 
         <section class="ultra-map-hero">
             <div class="hero-content">
@@ -71,6 +65,9 @@
             </div>
             <button onclick="askAlanBasedOnMap()" class="orange-btn">Ask Alan for Race Suggestions</button>
             <button class="green-btn">📄 Download Résumé (PDF)</button>
+            <button id="copy-share-link" class="blue-btn">🔗 Share My Ultra Map</button>
+            <span id="share-status"
+                style="display:none; margin-left: 12px; font-weight: bold; color: green;">Copied!</span>
         </section>
 
         <div id="ultra-map" style="height: 500px;"></div>
@@ -194,17 +191,42 @@
         document.addEventListener("DOMContentLoaded", () => {
             const token = localStorage.getItem("token");
             const stravaConnected = localStorage.getItem("stravaConnected");
+            const message = document.getElementById("connection-check-message");
+            const main = document.querySelector("main");
 
-            const message = document.getElementById("strava-connect-message");
-            const mainContent = document.querySelector("main");
-
-            if (!token || stravaConnected !== "true") {
-                // Hide everything else, show message
-                Array.from(mainContent.children).forEach(child => {
-                    if (child.id !== "strava-connect-message") child.style.display = "none";
-                });
+            if (!token) {
+                message.innerHTML = `
+                    <div class="map-warning-box">
+                        <p>🔒 You must be <a href="login.html">signed in</a> and connected to Strava to view your Ultra Map.<br />
+                        Don't have an account? <a href="register.html">Create one here</a>.</p>
+                    </div>`;
                 message.style.display = "block";
+                main.style.display = "none";
+                return;
             }
+
+            if (stravaConnected !== "true") {
+                message.innerHTML = `
+                    <div class="map-warning-box">
+                        <p>🚴‍♂️ To view your Ultra Map, please <a href="training_log.html">connect your Strava account</a>.</p>
+                    </div>`;
+                message.style.display = "block";
+                main.style.display = "none";
+            }
+        });
+    </script>
+
+    <script>
+        document.getElementById("copy-share-link")?.addEventListener("click", () => {
+            const username = localStorage.getItem("username") || "me";
+            const baseUrl = `${window.location.origin}${window.location.pathname}`;
+            const shareURL = `${baseUrl}?user=${encodeURIComponent(username)}`;
+
+            navigator.clipboard.writeText(shareURL).then(() => {
+                const status = document.getElementById("share-status");
+                status.style.display = "inline";
+                setTimeout(() => (status.style.display = "none"), 2000);
+            });
         });
     </script>
 
