🔒 Improve Ultra Map auth logic: show teaser when signed in without Strava, and redirect if logged out

--- a/frontend/ultra_map.html
+++ b/frontend/ultra_map.html
@@ -12,7 +12,35 @@
     <link rel="stylesheet" href="alanai_chatbot/chat-widget.css" />
     <link rel="icon" href="ultra_favicon.ico" type="image/x-icon" />
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="auth_utils.js" defer></script>
+    <script defer src="auth_utils.js"></script>
+    <script defer>
+        document.addEventListener("DOMContentLoaded", () => {
+            const token = localStorage.getItem("token");
+            const stravaConnected = localStorage.getItem("stravaConnected");
+            const message = document.getElementById("connection-check-message");
+            const main = document.querySelector("main");
+
+            if (!token) {
+                message.innerHTML = `
+        <div class="map-warning-box">
+          🔒 You must be <a href="login.html">signed in</a> and connected to Strava to view your Ultra Map.<br />
+          Don’t have an account? <a href="register.html">Create one here</a>.
+        </div>`;
+                message.style.display = "block";
+                if (main) main.style.display = "none";
+                return;
+            }
+
+            if (stravaConnected !== "true") {
+                message.innerHTML = `
+        <div class="map-warning-box">
+          🚴‍♂️ To view your Ultra Map, please <a href="training_log.html">connect your Strava account</a>.
+        </div>`;
+                message.style.display = "block";
+                if (main) main.style.display = "none";
+            }
+        });
+    </script>
 </head>
 
 <body class="forum-page">
@@ -186,37 +214,6 @@
     <script src="forum/inject_account_dropdown.js"></script>
     <script src="ultra_map_script.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
-
-    <script>
-        document.addEventListener("DOMContentLoaded", () => {
-            const token = localStorage.getItem("token");
-            const stravaConnected = localStorage.getItem("stravaConnected");
-            const message = document.getElementById("connection-check-message");
-            const main = document.querySelector("main");
-
-            if (!token) {
-                // 🔴 Not signed in
-                message.innerHTML = `
-              <div class="map-warning-box">
-                🔒 You must be <a href="login.html">signed in</a> and connected to Strava to view your Ultra Map.<br />
-                Don’t have an account? <a href="register.html">Create one here</a>.
-              </div>`;
-                message.style.display = "block";
-                main.style.display = "none";
-                return;
-            }
-
-            if (stravaConnected !== "true") {
-                // 🟡 Signed in, not connected
-                message.innerHTML = `
-              <div class="map-warning-box">
-                🚴‍♂️ To view your Ultra Map, please <a href="training_log.html">connect your Strava account</a>.
-              </div>`;
-                message.style.display = "block";
-                main.style.display = "none";
-            }
-        });
-    </script>
 
 </body>
 
