♻️ Fix Ultra Map access logic and visibility for login/Strava connection messages

--- a/frontend/ultra_map.html
+++ b/frontend/ultra_map.html
@@ -40,9 +40,10 @@
         </div>
     </header>
 
-    <main style="padding-top: 100px;">
+    <!-- 🔔 Connection Warning (shown only if needed) -->
+    <div id="connection-check-message" style="display: none; padding-top: 100px;"></div>
 
-        <div id="connection-check-message" style="display: none;"></div>
+    <main style="display: none;">
 
         <section class="ultra-map-hero">
             <div class="hero-content">
