--- a/frontend/ultra_map.html
+++ b/frontend/ultra_map.html
@@ -40,9 +40,8 @@
         </div>
     </header>
 
-    <main style="padding-top: 100px; display: none; min-height: calc(100vh - 300px);">
-        <!-- 🔔 Connection Warning (shown only if needed) -->
-        <div id="connection-check-message" style="display: none;"></div>
+    <div id="connection-check-message" style="display: none; padding-top: 100px;"></div>
+    <main style="display: none;">
 
         <section class="ultra-map-hero">
             <div class="hero-content">
