Add loading spinner and improve message layout for Ultra Map

--- a/frontend/ultra_map.html
+++ b/frontend/ultra_map.html
@@ -41,7 +41,14 @@
     </header>
 
     <div id="connection-check-message" style="display: none; padding-top: 100px;"></div>
+
+    <!-- ⏳ Ultra Map Loading Spinner -->
+    <div id="ultra-loading" style="text-align: center; margin-top: 40px;">
+        <p style="font-size: 1.2rem;">⏳ Loading your Ultra Map...</p>
+    </div>
+
     <main style="display: none;">
+        <!-- the rest of your map content -->
 
         <section class="ultra-map-hero">
             <div class="hero-content">
