--- a/frontend/ultra_map.html
+++ b/frontend/ultra_map.html
@@ -40,21 +40,21 @@
         </div>
     </header>
 
+    <!-- 🔔 Connection Warning (only shown if needed) -->
     <div id="connection-check-message" style="display: none; padding-top: 100px;"></div>
 
-    <!-- ⏳ Ultra Map Loading Spinner -->
-    <div id="ultra-loading" style="text-align: center; margin-top: 40px;">
-        <p style="font-size: 1.2rem;">⏳ Loading your Ultra Map...</p>
-    </div>
-
     <main style="display: none;">
-        <!-- the rest of your map content -->
-
         <section class="ultra-map-hero">
             <div class="hero-content">
                 <h1>📍 My Ultra Map</h1>
                 <p>Every run over 26.2 miles — visualized across the globe.</p>
+
+                <!-- ⏳ Ultra Map Loading Spinner -->
+                <div id="ultra-loading" style="text-align: center; margin-top: 20px;">
+                    <p style="font-size: 1.2rem;">⏳ Loading your Ultra Map...</p>
+                </div>
             </div>
+
             <div class="ultra-stats-row" style="display: flex; flex-wrap: wrap; gap: 20px; align-items: stretch;">
                 <div class="ultra-stats-card">
                     <p><strong>Total Ultra Runs:</strong> <span id="ultra-count">0</span></p>
@@ -69,6 +69,7 @@
                     <ul id="milestone-list" style="padding-left: 20px; margin: 0;"></ul>
                 </div>
             </div>
+
             <button onclick="askAlanBasedOnMap()" class="orange-btn">Ask Alan for Race Suggestions</button>
             <button class="green-btn">📄 Download Résumé (PDF)</button>
             <button id="copy-share-link" class="blue-btn">🔗 Share My Ultra Map</button>
@@ -95,102 +96,104 @@
             <h2 class="chart-title">🖼️ My Ultra Photo Timeline</h2>
             <div id="photo-scroll-container" class="photo-scroll"></div>
         </section>
-        </div>
     </main>
+</body>
 
-    <!-- 📝 Hidden Résumé Content (Updated: No Photo, Pushed to Top) -->
-    <div id="ultra-resume-content"
-        style="display: none; padding: 20px 40px 20px 40px; font-family: Arial, sans-serif; max-width: 700px;">
-        <h1 style="text-align: center; font-size: 24px; font-weight: bold; margin-bottom: 20px;">Ultramarathon
-            Résumé</h1>
+</html>
 
-        <section style="margin-bottom: 20px;">
-            <h2 style="font-size: 18px; border-bottom: 1px solid #ccc; padding-bottom: 5px;">📊 Summary</h2>
-            <p><strong>Total Ultra Runs:</strong> <span id="resume-ultra-count"></span></p>
-            <p><strong>Total Distance:</strong> <span id="resume-ultra-distance"></span></p>
-            <p><strong>Longest Run:</strong> <span id="resume-longest-run"></span></p>
-            <p><strong>Unique Locations:</strong> <span id="resume-unique-locations"></span></p>
-            <p><strong>States Completed:</strong> <span id="resume-states-count"></span></p>
-        </section>
+<!-- 📝 Hidden Résumé Content (Updated: No Photo, Pushed to Top) -->
+<div id="ultra-resume-content"
+    style="display: none; padding: 20px 40px 20px 40px; font-family: Arial, sans-serif; max-width: 700px;">
+    <h1 style="text-align: center; font-size: 24px; font-weight: bold; margin-bottom: 20px;">Ultramarathon
+        Résumé</h1>
 
-        <section style="margin-bottom: 20px;">
-            <h2 style="font-size: 18px; border-bottom: 1px solid #ccc; padding-bottom: 5px;">🏆 Milestone Wall</h2>
-            <ul id="resume-milestone-list" style="padding-left: 20px; margin: 0;"></ul>
-        </section>
+    <section style="margin-bottom: 20px;">
+        <h2 style="font-size: 18px; border-bottom: 1px solid #ccc; padding-bottom: 5px;">📊 Summary</h2>
+        <p><strong>Total Ultra Runs:</strong> <span id="resume-ultra-count"></span></p>
+        <p><strong>Total Distance:</strong> <span id="resume-ultra-distance"></span></p>
+        <p><strong>Longest Run:</strong> <span id="resume-longest-run"></span></p>
+        <p><strong>Unique Locations:</strong> <span id="resume-unique-locations"></span></p>
+        <p><strong>States Completed:</strong> <span id="resume-states-count"></span></p>
+    </section>
 
-        <section style="margin-bottom: 20px;">
-            <h2 style="font-size: 18px; border-bottom: 1px solid #ccc; padding-bottom: 5px;">🧠 Alan's Recommended
-                Next Challenge</h2>
+    <section style="margin-bottom: 20px;">
+        <h2 style="font-size: 18px; border-bottom: 1px solid #ccc; padding-bottom: 5px;">🏆 Milestone Wall</h2>
+        <ul id="resume-milestone-list" style="padding-left: 20px; margin: 0;"></ul>
+    </section>
 
-            <ul style="padding-left: 20px;">
-                <li>🏔️ Try a 100K or 100-mile mountain ultra</li>
-                <li>🌍 Explore a race in Europe or Asia</li>
-                <li>🔥 Build toward multi-day stage races</li>
-            </ul>
-        </section>
+    <section style="margin-bottom: 20px;">
+        <h2 style="font-size: 18px; border-bottom: 1px solid #ccc; padding-bottom: 5px;">🧠 Alan's Recommended
+            Next Challenge</h2>
 
-        <section style="margin-bottom: 20px;">
-            <h2 style="font-size: 18px; border-bottom: 1px solid #ccc; padding-bottom: 5px;">📝 Race Highlights</h2>
-            <div id="resume-race-list"></div>
-        </section>
+        <ul style="padding-left: 20px;">
+            <li>🏔️ Try a 100K or 100-mile mountain ultra</li>
+            <li>🌍 Explore a race in Europe or Asia</li>
+            <li>🔥 Build toward multi-day stage races</li>
+        </ul>
+    </section>
+
+    <section style="margin-bottom: 20px;">
+        <h2 style="font-size: 18px; border-bottom: 1px solid #ccc; padding-bottom: 5px;">📝 Race Highlights</h2>
+        <div id="resume-race-list"></div>
+    </section>
+</div>
+
+<div id="alan-bubble">💬</div>
+<div id="alan-window">
+    <div id="alan-messages"></div>
+    <form id="alan-form">
+        <input id="alan-input" type="text" placeholder="Ask Alan about races..." />
+        <button type="submit">Send</button>
+    </form>
+</div>
+
+<footer class="site-footer">
+    <div class="footer-links">
+        <a href="contact.html">Contact Us</a> |
+        <a href="privacy.html">Privacy Policy</a> |
+        <a href="termsofservice.html">Terms of Service</a> |
+        <a href="faq.html">FAQ</a> |
     </div>
+    <p class="footer-copy">&copy; 2025 Ultramarathon Connect. All rights reserved.</p>
+</footer>
 
-    <div id="alan-bubble">💬</div>
-    <div id="alan-window">
-        <div id="alan-messages"></div>
-        <form id="alan-form">
-            <input id="alan-input" type="text" placeholder="Ask Alan about races..." />
-            <button type="submit">Send</button>
-        </form>
-    </div>
+<div id="photo-lightbox"
+    style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.8); align-items:center; justify-content:center; z-index:1000;">
+    <img id="lightbox-image"
+        style="max-width:90%; max-height:90%; border-radius:10px; box-shadow:0 0 20px rgba(255,255,255,0.3);" />
+</div>
 
-    <footer class="site-footer">
-        <div class="footer-links">
-            <a href="contact.html">Contact Us</a> |
-            <a href="privacy.html">Privacy Policy</a> |
-            <a href="termsofservice.html">Terms of Service</a> |
-            <a href="faq.html">FAQ</a> |
+<div id="ultra-detail-modal" class="ultra-modal" style="display: none;">
+    <div class="ultra-modal-content">
+        <span class="ultra-modal-close">&times;</span>
+        <h2 id="modal-title">Race Title</h2>
+        <p id="modal-date">Date</p>
+        <p id="modal-distance">Distance</p>
+        <p id="modal-description">Description</p>
+        <div id="polyline-map" style="width: 100%; height: 300px; margin-top: 1.5rem; border-radius: 8px;"></div>
+        <div id="modal-photos" class="photo-carousel"></div>
+        <div id="notes-section" style="margin-top: 2rem;">
+            <h3 style="margin-bottom: 0.5rem;">📝 Add a Note</h3>
+            <textarea id="user-notes" rows="3" placeholder="Write your thoughts..."
+                style="width: 100%; border-radius: 8px; border: 1px solid #ccc; padding: 10px; font-size: 1rem; resize: vertical;"></textarea>
+            <button id="save-notes-btn"
+                style="margin-top: 0.5rem; padding: 8px 16px; background-color: #28a745; color: white; border: none; border-radius: 5px; cursor: pointer;">
+                Save Note
+            </button>
+            <div id="saved-notes" style="margin-top: 1.5rem;"></div>
         </div>
-        <p class="footer-copy">&copy; 2025 Ultramarathon Connect. All rights reserved.</p>
-    </footer>
-
-    <div id="photo-lightbox"
-        style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.8); align-items:center; justify-content:center; z-index:1000;">
-        <img id="lightbox-image"
-            style="max-width:90%; max-height:90%; border-radius:10px; box-shadow:0 0 20px rgba(255,255,255,0.3);" />
     </div>
+</div>
 
-    <div id="ultra-detail-modal" class="ultra-modal" style="display: none;">
-        <div class="ultra-modal-content">
-            <span class="ultra-modal-close">&times;</span>
-            <h2 id="modal-title">Race Title</h2>
-            <p id="modal-date">Date</p>
-            <p id="modal-distance">Distance</p>
-            <p id="modal-description">Description</p>
-            <div id="polyline-map" style="width: 100%; height: 300px; margin-top: 1.5rem; border-radius: 8px;"></div>
-            <div id="modal-photos" class="photo-carousel"></div>
-            <div id="notes-section" style="margin-top: 2rem;">
-                <h3 style="margin-bottom: 0.5rem;">📝 Add a Note</h3>
-                <textarea id="user-notes" rows="3" placeholder="Write your thoughts..."
-                    style="width: 100%; border-radius: 8px; border: 1px solid #ccc; padding: 10px; font-size: 1rem; resize: vertical;"></textarea>
-                <button id="save-notes-btn"
-                    style="margin-top: 0.5rem; padding: 8px 16px; background-color: #28a745; color: white; border: none; border-radius: 5px; cursor: pointer;">
-                    Save Note
-                </button>
-                <div id="saved-notes" style="margin-top: 1.5rem;"></div>
-            </div>
-        </div>
-    </div>
-
-    <!-- ✅ Script Order Matters -->
-    <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@mapbox/polyline@1.1.1/src/polyline.min.js"></script>
-    <!-- ✅ Correct plugin -->
-    <script src="https://unpkg.com/leaflet.markercluster@1.5.3/dist/leaflet.markercluster.js"></script>
-    <script src="alanai_chatbot/alan.js"></script>
-    <script src="forum/inject_account_dropdown.js"></script>
-    <script src="ultra_map_script.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
+<!-- ✅ Script Order Matters -->
+<script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@mapbox/polyline@1.1.1/src/polyline.min.js"></script>
+<!-- ✅ Correct plugin -->
+<script src="https://unpkg.com/leaflet.markercluster@1.5.3/dist/leaflet.markercluster.js"></script>
+<script src="alanai_chatbot/alan.js"></script>
+<script src="forum/inject_account_dropdown.js"></script>
+<script src="ultra_map_script.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
 
 </body>
 
